[package]
name = "scheduler_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
chrono = "0.4.22"
sh-inline = "0.3.0"
clap = { version="4.0.2", features=["derive"]}
